# data-science-template

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  MLproject  Makefile  README.md  clearml.conf  code_prettifier.sh  conda.yaml  docker-compose.yml  linter.sh  main.py  preprocess.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  train.py  workflow.py
.github/workflows/: workflow.yaml
configs/: config.yaml  main.yaml  pipeline.yaml  preprocess.yaml  train.yaml
configs/baseline/: config.yaml
configs/baselines/: base.yaml  bpr.yaml  config.yaml  default.yaml
configs/baselines/method/: bpr.yaml  simple.yaml
configs/data_processing/: bpr.yaml  config.yaml  default.yaml
configs/data_processing/method/: bpr.yaml  simple.yaml
configs/hydra/job_logging/: custom.yaml
configs/inference/: config.yaml
configs/prediction/: config.yaml
configs/preprocessing/: config.yaml
configs/training/: config.yaml
configs/training/model/: bpr.yaml  (+17 more)
data/raw_data/: data.csv
notebooks/: analyze_embeddings.ipynb  generate_data.ipynb  test_pandas.ipynb  test_polars.ipynb
notebooks/data/: contentwise.ipynb  contentwise_basic_info.ipynb  contentwise_eda.ipynb  contentwise_model.ipynb  movielens.ipynb  prepare_contentwise.ipynb  taobao.ipynb  tmp.ipynb
src/: metrics.py  model.py
src/mypackage/: __init__.py
src/preprocessing/: preprocessing.py
steps/: compute_baseline.py  compute_baselines.py  evaluate_baselines.py  infer.py  optimize_hparams.py  pipeline.py  predict.py  preprocess.py  process_data.py  run_pipeline.py  serve.py  train.py
tasks/: pipeline.py  preprocess.py  train.py
tests/: conftest.py  test_example.py  test_model.py  test_preprocessing.py
(+46 files in other folders)
