[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "my-package"
version = "0.1.0"
dynamic = ["dependencies"]
authors = [
  {name="Krystian Franus", email="krystian.franus@gmail.com"},
]
description = "Short description"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/krystianfranus/data-science-template"

[tool.setuptools.dynamic]
dependencies = {file = "requirements.txt"}

[tool.black]
exclude = '''
/(
    notebooks
)/
'''

[tool.flake8]
ignore = ["E501", "W503", "E226"]
# E501: Line too long
# W503: Line break occurred before binary operator
# E226: Missing white space around arithmetic operator

[tool.isort]
profile = "black"
